--- a/premium_profile.html
+++ b/premium_profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Fxmaestro - Free Profile </title>
+    <title>Fxmaestro - Premium Profile </title>
     <link rel="icon" type="image/x-icon" href="assets/img/logos/logo.png" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -50,72 +50,114 @@
 </head>
 
 <body id="page-to">
-    <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top  black1_bg" id="mainNav">
+    <nav class="navbar  navbar-expand-lg navbar-dark fixed-top black1_bg" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="/">
                 <img src="assets/img/logos/logo.png" alt="" style="width: 100%; height:100%;" /></a>
-            <a class="btn btn-success px-4 js-scroll-trigger d-lg-none d-md-none d-sm-inline-block" href="./upgrade.html">
-                Go Premium
-            </a>
-            <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars ml-1"></i>
-            </button>
+
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav m-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">
-                            Correlation charts
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">
-                            Heat Maps
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">
-                            Trend Meter
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">
-                            Stock Scanner
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#">
-                            Market Sentiment
-                        </a>
-                    </li>
+                <ul class="navbar-nav  m-auto">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./premium.html">Home</a></li>
 
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Forex Tools
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Correlation charts</a>
+                            <a class="dropdown-item" href="#">Heat maps</a>
+                            <a class="dropdown-item" href="#">Trend Meter</a>
+                            <a class="dropdown-item" href="#">Stock Scanner</a>
+                            <a class="dropdown-item" href="#">Market Sentiment</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#">
+                            Market Trend Dynamics
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#">
+                            Technical Analysis
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="./all_signals.html">
+                            Trade Signals
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#">
+                            Library
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="./trading_room.html">
+                            Trading Room
+                        </a>
+                    </li>
                 </ul>
-
                 <ul class="mb-0 float-md-right d-inline-flex  navbar-nav">
-                    <li class="nav-item">
-                        <a class="btn btn-success px-4 js-scroll-trigger" href="./upgrade.html">
-                            Go Premium
-                        </a>
-                    </li>
-
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             My Account
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./free_profile.html">Profile</a>
-                            <a class="dropdown-item" href="./free_notification.html">Notifications</a>
+                            <a class="dropdown-item" href="./premium_profile.html">Profile</a>
                             <a class="dropdown-item" href="#">Billing & Invoices</a>
                             <a class="dropdown-item" href="#">Support</a>
                             <a class="dropdown-item" href="#">Log out</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
+                            <i class="fa fa-bell h5 text-white">
+                            </i>
+                        </a>
+                        <div class="dropdown-menu second" aria-labelledby="navbarDropdown">
+
+
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 4
+                                    </span>
+                                </div>
+                            </a>
+
+                            <a class="dropdown-item">
+                                <div class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 3
+                                    </span>
+                                </div>
+                            </a>
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                </div>
+                            </a>
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
+
             </div>
+            <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars ml-1"></i>
+            </button>
 
         </div>
     </nav>
+
 
     <section class="page-section  black2_bg text-white">
 
@@ -276,34 +318,49 @@
                                                 <div class="col-md-8">
                                                     <div class="mb-3">
                                                         <h1 class="h3 text-white">
-                                                            Free Plan
+                                                            Premium Plan
                                                         </h1>
-                                                        <p class="h6 font-weight-normal p-0">
-                                                            Real-time forex news
-                                                        </p>
-                                                        <p class="h6 font-weight-normal p-0">
-                                                            Real-time stock updates on
-                                                        </p>
-                                                        <p class="h6 font-weight-normal p-0">
-                                                            Real-time stock updates on
-                                                        </p>
+                                                        <div class="row justify-content-between">
+                                                            <div class="col-sm-6">
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time forex news
+                                                                </p>
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time stock updates on
+                                                                </p>
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time stock updates on
+                                                                </p>
+                                                            </div>
+                                                            <div class="col-sm-6">
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time forex news
+                                                                </p>
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time stock updates on
+                                                                </p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                     <div class="d-flex align-items-end">
                                                         <div class="mr-md-4">
-                                                            <a class="btn btn-success px-4 js-scroll-trigger" href="./upgrade.html">
-                                                                Go Premium
+                                                            <a class="btn btn-success px-4 js-scroll-trigger" href="#">
+                                                                Renew
                                                             </a>
                                                         </div>
                                                         <div>
-                                                            <p class="text-success m-0 p-0">See full details</p>
+                                                            <p class="text-success m-0 p-0">Expires May 14th 2021</p>
                                                         </div>
                                                     </div>
 
                                                 </div>
                                                 <div class="col-md-2">
-                                                    <h1 class="h2 text-white">
-                                                        $0.00
+                                                    <h1 class="h2 text-white mb-0">
+                                                        $900.00
                                                     </h1>
+                                                    <p class="m-0 p-0 text-success">
+                                                        Yearly
+                                                    </p>
                                                 </div>
                                             </div>
                                         </div>
@@ -387,7 +444,27 @@
             </div>
         </div>
     </footer>
-    <!-- Portfolio Modals-->
+    <!-- Modal -->
+    <div class="modal fade shadow  " id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+            <div class="modal-content" style="background-color: #222;">
+                <div class="modal-header">
+                    <h5 class="modal-title text-white">Notification Title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-3">
+                    <div class="p-5 boxshadow black1_bg">
+                        <h1 class="h3 mb-4 text-center text-white">Notification title</h1>
+                        <p class="text-white">
+                            Second Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique error pariatur commodi veritatis sit laborum animi voluptatum dolorem adipisci. Quod eum minus vel commodi illum possimus eos magnam officia sapiente.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
