--- a/premium.html
+++ b/premium.html
@@ -17,14 +17,19 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/mine.css">
-    <!-- <link rel="stylesheet" href="./css/pricing_input.css"> -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 
     <style>
         .third .nav-link.active {
             background-color: transparent !important;
             color: black;
             border-bottom: 3px solid #037A14;
+        }
+        
+        .dropdown-menu.second {
+            position: absolute !important;
+            background-color: white;
+            float: left;
+            left: -100px !important;
         }
     </style>
 
@@ -86,13 +91,53 @@
                             My Account
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="./premium_profile.html">Profile</a>
                             <a class="dropdown-item" href="#">Billing & Invoices</a>
                             <a class="dropdown-item" href="#">Support</a>
                             <a class="dropdown-item" href="#">Log out</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
+                            <i class="fa fa-bell h5 text-white">
+                            </i>
+                        </a>
+                        <div class="dropdown-menu second" aria-labelledby="navbarDropdown">
+
+
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 4
+                                    </span>
+                                </div>
+                            </a>
+
+                            <a class="dropdown-item">
+                                <div class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 3
+                                    </span>
+                                </div>
+                            </a>
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                </div>
+                            </a>
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
+
             </div>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
@@ -130,7 +175,6 @@
                                     Signal</button>
                             </a>
                         </div>
-
                     </div>
                     <div class="card bg-transparent boxshadow p-3">
                         <div class="">
@@ -474,87 +518,44 @@
             </div>
         </div>
     </footer>
-    <!-- Portfolio Modals-->
 
-    <!-- First Pop up -->
-    <div class="modal fade shadow" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content" style="background-color:white">
+            <div>
+                <div id="cursor">
+                    <p class="h4 text-center py-2 text-dark font-weight-bold">Click on the image to zoom in</p>
+                    <figure id="magnify_area">
+                        <img id="magnify_image" src="./assets/img/chartboad22.jpg" alt="">
+                    </figure>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade shadow  " id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
             <div class="modal-content" style="background-color: #222;">
                 <div class="modal-header">
-                    <h5 class="modal-title text-white" id="exampleModalLongTitle">Trade Signal</h5>
+                    <h5 class="modal-title text-white">Notification Title</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true" class="text-white">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body mb-3">
-                    <div class="container">
-                        <div class="row mb-3 justify-content-center">
-                            <div class="col-md-11 px-4">
-                                <div data-toggle="modal" data-target="#exampleModalLong">
-                                    <img style="cursor: zoom-in;" class="w-100 hover boxshadow2" src="./assets/img/chartboad2.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row justify-content-center">
-                            <div class="col-md-5 p-3 mr-md-3" style="background: #191919;box-sizing: border-box;box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);border-radius: 3px;">
-                                <div v-for="(item, index) of content" :key="index" class="text-light">
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <p class="m-0">
-                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui delectus quam doloremque modi, temporibus unde itaque odit omnis sunt vitae? Autem
-                                            </p>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <p class="text-left m-0">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui delectus quam doloremque modi, temporibus unde itaque odit omnis sunt vitae? Autem
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <img src="assets/hrimage.png" class="w-100 m-0" alt="">
-                                </div>
-                            </div>
-                            <div class="col-md-5 p-3" style="background:#191919;box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);border-radius: 3px">
-                                <p class="text-justify; text-white">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad voluptates blanditiis porro aperiam dolor aliquam est eum quos dolorem labore? Iste tempora unde dolorem molestias voluptatibus, explicabo et tempora unde dolorem molestias voluptatibus, explicabo
-                                    et quisquam quidem.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <Disclaimer />
-
-                </div>
-                <div class="modal-footer text-white d-flex justify-content-between align-items-center">
-                    <div>
-                        <p class="h6 font-weight-bold mb-0">Author:</p>
-                        <p>Chika Akosa</p>
-                    </div>
-                    <div>
-                        <button type="button" class="btn btn-secondary px-3" data-dismiss="modal">Close</button>
+                    <div class="p-5 boxshadow black1_bg">
+                        <h1 class="h3 mb-4 text-center text-white">Notification title</h1>
+                        <p class="text-white">
+                            Second Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique error pariatur commodi veritatis sit laborum animi voluptatum dolorem adipisci. Quod eum minus vel commodi illum possimus eos magnam officia sapiente.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- Second Pop up -->
-    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-        <div class="modal-dialog modal-xl" role="document">
-            <div class="modal-content" style="background-color:white">
-                <div>
-                    <div id="cursor">
-                        <p class="h4 text-center py-2 text-dark font-weight-bold">Click on the image to zoom in</p>
-                        <figure id="magnify_area">
-                            <img id="magnify_image" src="./assets/img/chartboad22.jpg" alt="">
-                        </figure>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
 
     <!-- Bootstrap core JS-->
