--- a/free_profile.html
+++ b/free_profile.html
@@ -123,36 +123,43 @@
             <!-- Third -->
             <div class="container third mt-4">
                 <div class="row justify-content-center">
-                    <div class="col-md-9  p-0 card border-radius mb-4 py-md-4 ">
+                    <div class="col-md-10  p-0 card border-radius mb-4 py-md-4 ">
                         <div class="row justify-content-center">
                             <div class="col-md-11">
                                 <div class="card-body">
                                     <div class="">
-                                        <ul class="nav row justify-content-center no-gutters nav-pills mb-3 " id="pills-tab" role="tablist">
-                                            <li class="nav-item col-md-3 px-1 text-center">
+                                        <ul class="nav d-flex justify-content-center no- nav-pills mb-3 " id="pills-tab" role="tablist">
+                                            <li class="nav-item  px-1 text-center" style="flex:1">
                                                 <a class="nav-link text-grey active" id="pills-active-tab" data-toggle="pill" href="#my-profile" role="tab" aria-controls="pills-home" aria-selected="true">
                                                     <span class="text-white">My Profile
                                                     </span>
                                                 </a>
                                             </li>
-                                            <li class="nav-item col-md-3 px-1 text-center">
+                                            <li class="nav-item  px-1 text-center" style="flex:1">
                                                 <a class="nav-link text-dark" id="pills-gainers-tab" data-toggle="pill" href="#billing-invoices" role="tab" aria-controls="pills-gainers" aria-selected="false">
                                                     <span class="text-white">
                                                         Billing & Invoices
                                                     </span>
                                                 </a>
                                             </li>
-                                            <li class="nav-item col-md-3 px-1 text-center">
+                                            <li class="nav-item  px-1 text-center" style="flex:1">
                                                 <a class="nav-link text-dark" id="pills-contact-tab" data-toggle="pill" href="#my-subscription" role="tab" aria-controls="pills-contact" aria-selected="false">
                                                     <span class="text-white">
                                                         My Subscription
                                                     </span>
                                                 </a>
                                             </li>
-                                            <li class="nav-item col-md-3 px-1 text-center">
+                                            <li class="nav-item  px-1 text-center" style="flex:1">
                                                 <a class="nav-link text-dark" id="pills-support-tab" data-toggle="pill" href="#support" role="tab" aria-controls="pills-contact" aria-selected="false">
                                                     <span class="text-white">
                                                         Support
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="nav-item col-md-3 px-1 text-center">
+                                                <a class="nav-link text-dark" id="pills-support-tab" data-toggle="pill" href="#security" role="tab" aria-controls="pills-contact" aria-selected="false">
+                                                    <span class="text-white">
+                                                        Security
                                                     </span>
                                                 </a>
                                             </li>
@@ -160,17 +167,37 @@
                                     </div>
                                     <div class="tab-content mt-md-5" id="pills-tabContent">
                                         <div class="tab-pane fade show active" id="my-profile" role="tabpanel" aria-labelledby="pills-active-tab">
-                                            <div class="row">
+                                            <div class="row justify-content-between align-items-center no-gutters">
                                                 <div class="col-md-3">
                                                     <img src="https://miro.medium.com/max/560/1*MccriYX-ciBniUzRKAUsAw.png" class="w-100" alt="">
+                                                    <div class="row justify-content-center">
+
+                                                        <div class="col-md-10">
+                                                            <button id="swapButton" class="mt-4 btn btn-block btn-success">Edit</button>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                <div class="col-md-9">
-                                                    <form>
+                                                <div class="col-md-8">
+                                                    <div id="profile_content">
+                                                        <h1 class="h4 font-weight-normal text-muted">
+                                                            Full Name : Welcome Home
+                                                        </h1>
+                                                        <h1 class="h4 font-weight-normal text-muted">
+                                                            Email : email@gmail.com
+                                                        </h1>
+                                                        <h1 class="h4 font-weight-normal text-muted">
+                                                            Phone No : 09088877727
+                                                        </h1>
+                                                    </div>
+                                                    <form class="hide" id="profile_form">
                                                         <div class="form-group mb-4">
                                                             <input required type="text" class="form-control" placeholder="First Name">
                                                         </div>
                                                         <div class="form-group mb-4">
                                                             <input required type="text" class="form-control" placeholder="Last Name ">
+                                                        </div>
+                                                        <div class="form-group mb-4">
+                                                            <input required type="tel" readonly class="form-control" placeholder="Phone Number">
                                                         </div>
                                                         <div class="form-group mb-4">
                                                             <input required type="email" readonly class="form-control" placeholder="email@gmail.com">
@@ -332,6 +359,30 @@
                                                 </div>
                                             </form>
                                         </div>
+                                        <div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="pills-contact-tab">
+                                            <div class="row justify-content-center">
+                                                <div class="col-md-10">
+                                                    <form>
+                                                        <div class="form-group mb-4">
+                                                            <input required type="text" class="form-control" placeholder="Enter New Password">
+                                                        </div>
+                                                        <div class="form-group mb-4">
+                                                            <input required type="text" class="form-control" placeholder="Confirm Password">
+                                                        </div>
+
+                                                        <div class="row justify-content-center mt-5">
+                                                            <div class="col-md-4">
+                                                                <button type="submit" class=" btn btn-block btn-success">
+                                                                    <span>
+                                                                        Update
+                                                                    </span>
+                                                                </button>
+                                                            </div>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -401,14 +452,7 @@
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
-    <script>
-        AOS.init({
-            offset: 100,
-            duration: 400
-        });
-    </script> -->
+    <script src="js/profile_tweak.js"></script>
 </body>
 
 </html>
