--- a/free_profile.html
+++ b/free_profile.html
@@ -111,6 +111,47 @@
                             <a class="dropdown-item" href="#">Log out</a>
                         </div>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
+                            <i class="fa fa-bell h5 text-white">
+                            </i>
+                        </a>
+                        <div class="dropdown-menu second" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item m-0">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
+                                </div>
+                            </a>
+
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
+                                </div>
+                            </a>
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
+                                </div>
+                            </a>
+                            <a class="dropdown-item">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
+                                    <span class="text-dark">
+                                        Notification 2
+                                    </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
@@ -125,7 +166,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-10  p-0 card border-radius mb-4 py-md-4 ">
                         <div class="row justify-content-center">
-                            <div class="col-md-11">
+                            <div class="col-md-12">
                                 <div class="card-body">
                                     <div class="">
                                         <ul class="nav d-flex justify-content-center no- nav-pills mb-3 " id="pills-tab" role="tablist">
@@ -438,7 +479,27 @@
             </div>
         </div>
     </footer>
-    <!-- Portfolio Modals-->
+    <!-- Modal -->
+    <div class="modal fade shadow  " id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+            <div class="modal-content" style="background-color: #222;">
+                <div class="modal-header">
+                    <h5 class="modal-title text-white">Notification Title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-3">
+                    <div class="p-5 boxshadow black1_bg">
+                        <h1 class="h3 mb-4 text-center text-white">Notification title</h1>
+                        <p class="text-white">
+                            Second Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique error pariatur commodi veritatis sit laborum animi voluptatum dolorem adipisci. Quod eum minus vel commodi illum possimus eos magnam officia sapiente.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
