--- a/trading_room.html
+++ b/trading_room.html
@@ -87,21 +87,21 @@
                             </i>
                         </a>
                         <div class="dropdown-menu second" aria-labelledby="navbarDropdown">
-
-
-                            <a class="dropdown-item">
+                            <a class="dropdown-item m-0">
                                 <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
                                     <span class="text-dark">
-                                        Notification 4
+                                        Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
 
                             <a class="dropdown-item">
-                                <div class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
                                     <span class="text-dark">
-                                        Notification 3
+                                        Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                             <a class="dropdown-item">
@@ -109,6 +109,7 @@
                                     <span class="text-dark">
                                         Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                             <a class="dropdown-item">
@@ -116,12 +117,12 @@
                                     <span class="text-dark">
                                         Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                         </div>
                     </li>
                 </ul>
-
             </div>
             <button class="navbar-toggler bg-transparent navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars ml-1"></i>
