--- a/all_signals.html
+++ b/all_signals.html
@@ -166,21 +166,21 @@
                             </i>
                         </a>
                         <div class="dropdown-menu second" aria-labelledby="navbarDropdown">
-
-
-                            <a class="dropdown-item">
+                            <a class="dropdown-item m-0">
                                 <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
                                     <span class="text-dark">
-                                        Notification 4
+                                        Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
 
                             <a class="dropdown-item">
-                                <div class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
                                     <span class="text-dark">
-                                        Notification 3
+                                        Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                             <a class="dropdown-item">
@@ -188,6 +188,7 @@
                                     <span class="text-dark">
                                         Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                             <a class="dropdown-item">
@@ -195,6 +196,7 @@
                                     <span class="text-dark">
                                         Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                         </div>
