--- a/premium_profile.html
+++ b/premium_profile.html
@@ -115,21 +115,21 @@
                             </i>
                         </a>
                         <div class="dropdown-menu second" aria-labelledby="navbarDropdown">
-
-
-                            <a class="dropdown-item">
+                            <a class="dropdown-item m-0">
                                 <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
                                     <span class="text-dark">
-                                        Notification 4
+                                        Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
 
                             <a class="dropdown-item">
-                                <div class="nav-link" data-toggle="modal" data-target="#exampleModalCenter">
+                                <div class="nav-link " data-toggle="modal" data-target="#exampleModalCenter">
                                     <span class="text-dark">
-                                        Notification 3
+                                        Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                             <a class="dropdown-item">
@@ -137,6 +137,7 @@
                                     <span class="text-dark">
                                         Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                             <a class="dropdown-item">
@@ -144,6 +145,7 @@
                                     <span class="text-dark">
                                         Notification 2
                                     </span>
+                                    <small class="d-block text-dark">Lorem ipsum dolor</small>
                                 </div>
                             </a>
                         </div>
@@ -167,7 +169,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-10 p-0 card border-radius mb-4 py-md-4 ">
                         <div class="row justify-content-center">
-                            <div class="col-md-11">
+                            <div class="col-md-12">
                                 <div class="card-body">
                                     <div class="">
                                         <ul class="nav d-flex justify-content-center no- nav-pills mb-3 " id="pills-tab" role="tablist">
